--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   adapter: mysql2
   database: college_app_development
   username: root
-  password: 
+  password: '123'
   #socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -15,14 +15,14 @@ test:
   adapter: mysql2
   database: college_app_test
   username: root
-  password: 
+  password: '123'
   #socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
   database: college_app_production
   username: root
-  password: 
+  password: '123'
 #   #socket: /var/run/mysqld/mysqld.sock  
 
 
