--- a/config/database.yml
+++ b/config/database.yml
@@ -1,55 +1,55 @@
 
-# Mysql
-# gem install mysql
-development:
-  adapter: mysql2
-  database: college_app_development
-  username: root
-  password: 
-  #socket: /var/run/mysqld/mysqld.sock
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-
-  adapter: mysql2
-  database: college_app_test
-  username: root
-  password: 
-  #socket: /var/run/mysqld/mysqld.sock
-
-production:
-  adapter: mysql2
-  database: college_app_production
-  username: root
-  password: 
-#   #socket: /var/run/mysqld/mysqld.sock  
-
-
-
-# # SQLite version 3.x
-# #   gem install sqlite3
-# #
-# #   Ensure the SQLite 3 gem is defined in your Gemfile
-# #   gem 'sqlite3'
+# # Mysql
+# # gem install mysql
 # development:
-#   adapter: sqlite3
-#   database: db/development.sqlite3
-#   pool: 5
-#   timeout: 5000
+#   adapter: mysql2
+#   database: college_app_development
+#   username: root
+#   password: 
+#   #socket: /var/run/mysqld/mysqld.sock
 
 # # Warning: The database defined as "test" will be erased and
 # # re-generated from your development database when you run "rake".
 # # Do not set this db to the same as development or production.
 # test:
-#   adapter: sqlite3
-#   database: db/test.sqlite3
-#   pool: 5
-#   timeout: 5000
+
+#   adapter: mysql2
+#   database: college_app_test
+#   username: root
+#   password: 
+#   #socket: /var/run/mysqld/mysqld.sock
 
 # production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
+#   adapter: mysql2
+#   database: college_app_production
+#   username: root
+#   password: 
+# #   #socket: /var/run/mysqld/mysqld.sock  
+
+
+
+# SQLite version 3.x
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem 'sqlite3'
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+
+production:
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
