--- a/config/database.yml
+++ b/config/database.yml
@@ -27,34 +27,34 @@ production:
 #   #socket: /var/run/mysqld/mysqld.sock  
 
 
-development:
-  adapter: postgresql
-  encoding: unicode
-  database: estore
-  host: localhost
-  pool: 5
-  username: postgres
-  password: root
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: estore
+#   host: localhost
+#   pool: 5
+#   username: postgres
+#   password: root
 
   
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-      adapter: postgresql
-      encoding: unicode
-      database: estore
-      host: localhost
-      pool: 5
-      username: postgres
-      password: root
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#       adapter: postgresql
+#       encoding: unicode
+#       database: estore
+#       host: localhost
+#       pool: 5
+#       username: postgres
+#       password: root
 
       
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: estore
-  host: localhost
-  pool: 5
-  username: postgres
-  password: root
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: estore
+#   host: localhost
+#   pool: 5
+#   username: postgres
+#   password: root
