--- a/config/database.yml
+++ b/config/database.yml
@@ -1,29 +1,29 @@
 
 # Mysql
 # gem install mysql
-development:
-  adapter: mysql2
-  database: college_app_development
-  username: root
-  password: 
-  #socket: /var/run/mysqld/mysqld.sock
+# development:
+#   adapter: mysql2
+#   database: college_app_development
+#   username: root
+#   password: 
+#   #socket: /var/run/mysqld/mysqld.sock
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
 
-  adapter: mysql2
-  database: college_app_test
-  username: root
-  password: 
-  #socket: /var/run/mysqld/mysqld.sock
+#   adapter: mysql2
+#   database: college_app_test
+#   username: root
+#   password: 
+#   #socket: /var/run/mysqld/mysqld.sock
 
-production:
-  adapter: mysql2
-  database: college_app_production
-  username: root
-  password: 
+# production:
+#   adapter: mysql2
+#   database: college_app_production
+#   username: root
+#   password: 
 #   #socket: /var/run/mysqld/mysqld.sock  
 
 
@@ -58,3 +58,28 @@ production:
 #   pool: 5
 #   username: postgres
 #   password: root
+
+
+
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
+
+production:
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
+
+
