--- a/config/database.yml
+++ b/config/database.yml
@@ -2,36 +2,35 @@
 # Mysql
 # gem install mysql
 
-# development:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
-#   #socket: /var/run/mysqld/mysqld.sock
-
-# # Warning: The database defined as "test" will be erased and
-# # re-generated from your development database when you run "rake".
-# # Do not set this db to the same as development or production.
-# test:
-
-#   adapter: mysql2
-#   database: college_app_test
-#   username: root
-#   password: 
-#   #socket: /var/run/mysqld/mysqld.sock
-
-# production:
-#   adapter: mysql2
-#   database: college_app_production
-#   username: root
-#   password: 
-
-# #   #socket: /var/run/mysqld/mysqld.sock  
-
 development:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
 
- adapter: mysql2
- pool: 5 
- database: college_app_development
- username: root
- password: root
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+
+  adapter: mysql2
+  database: college_app_test
+  username: root
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
+
+production:
+  adapter: mysql2
+  database: college_app_production
+  username: root
+  password: 
+#   #socket: /var/run/mysqld/mysqld.sock  
+
+# development:
+
+#  adapter: mysql2
+#  pool: 5 
+#  database: college_app_development
+#  username: root
+#  password: root
