--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,12 @@
 
-# # Mysql
-# # gem install mysql
-# development:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
-#   #socket: /var/run/mysqld/mysqld.sock
+# Mysql
+# gem install mysql
+development:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: root
+  #socket: /var/run/mysqld/mysqld.sock
 
 # # Warning: The database defined as "test" will be erased and
 # # re-generated from your development database when you run "rake".
@@ -27,34 +27,34 @@
 # #   #socket: /var/run/mysqld/mysqld.sock  
 
 
-development:
+# development:
 
-  adapter: postgresql
-  encoding: unicode
-  database: estore
-  host: localhost
-  pool: 5
-  username: postgres
-  password: root
+#   adapter: postgresql
+#   encoding: unicode
+#   database: estore
+#   host: localhost
+#   pool: 5
+#   username: postgres
+#   password: root
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-      adapter: postgresql
-      encoding: unicode
-      database: estore
-      host: localhost
-      pool: 5
-      username: postgres
-      password: root
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#       adapter: postgresql
+#       encoding: unicode
+#       database: estore
+#       host: localhost
+#       pool: 5
+#       username: postgres
+#       password: root
 
       
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: estore
-  host: localhost
-  pool: 5
-  username: postgres
-  password: root
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: estore
+#   host: localhost
+#   pool: 5
+#   username: postgres
+#   password: root
