--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   adapter: mysql2
   database: college_app_development
   username: root
-  password: 
+  password: root
   #socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
