--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ production:
   adapter: mysql2
   database: college_app_development
   username: root
-  password: root
+  password: 
 #   #socket: /var/run/mysqld/mysqld.sock  
 
 
