--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,27 @@
-# development:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
-#   #socket: /var/run/mysqld/mysqld.sock
+development:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
 
-# production:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
+production:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: 
 #   #socket: /var/run/mysqld/mysqld.sock  
 
 
-development:
+# development:
 
-  adapter: postgresql
-  encoding: unicode
-  database: estore1
-  host: localhost
-  pool: 5
-  username: postgres
-  password: root
+#   adapter: postgresql
+#   encoding: unicode
+#   database: estore1
+#   host: localhost
+#   pool: 5
+#   username: postgres
+#   password: root
 
 # # Warning: The database defined as "test" will be erased and
 # # re-generated from your development database when you run "rake".
