--- a/config/database.yml
+++ b/config/database.yml
@@ -1,47 +1,21 @@
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
+
 development:
-  adapter: mysql2
-  database: college_app_development
-  username: root
-  password: 
-  #socket: /var/run/mysqld/mysqld.sock
+  <<: *default
+  database: ezyrent_development
+
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  <<: *default
+  database: ezyrent_test
 
 production:
-  adapter: mysql2
-  database: college_app_development
-  username: root
-  password: 
-#   #socket: /var/run/mysqld/mysqld.sock  
-
-
-# development:
-
-#   adapter: postgresql
-#   encoding: unicode
-#   database: estore1
-#   host: localhost
-#   pool: 5
-#   username: postgres
-#   password: root
-
-# # Warning: The database defined as "test" will be erased and
-# # re-generated from your development database when you run "rake".
-# # Do not set this db to the same as development or production.
-# test:
-#       adapter: postgresql
-#       encoding: unicode
-#       database: estore1
-#       host: localhost
-#       pool: 5
-#       username: postgres
-#       password: root
-
-      
-# production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: estore1
-#   host: localhost
-#   pool: 5
-#   username: postgres
-#   password: root
-
+  url: <%= ENV['DATABASE_URL'] %>
