--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,16 @@
 
-# development:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
-#   #socket: /var/run/mysqld/mysqld.sock
+development:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: 
+  #socket: /var/run/mysqld/mysqld.sock
 
-# production:
-#   adapter: mysql2
-#   database: college_app_development
-#   username: root
-#   password: 
+production:
+  adapter: mysql2
+  database: college_app_development
+  username: root
+  password: 
 
 
 # development:
