--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   adapter: mysql2
   database: college_app_development
   username: root
-  password: 
+  password: root
   #socket: /var/run/mysqld/mysqld.sock
 
 production:
