Move to new stripe creds.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ app/.DS_Store
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore application configuration
+/config/application.yml
